--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ header {
 .logo {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .menu {
@@ -40,7 +41,113 @@ nav a {
   color: #727272;
 }
 
-.nav-ativo:hover {
+nav .nav-ativo,
+nav a:hover {
   background-color: #39aae1;
   color: #fff;
+}
+
+#banner {
+  display: flex;
+  justify-content: center;
+  background-image: url(../img/img1.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 670px;
+}
+
+.coluna {
+  flex-direction: column;
+}
+
+.banne_headline {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.banner_opacoes {
+  height: 210px;
+  display: flex;
+}
+
+.banne_headline h1 {
+  color: #ffffff;
+  font-size: 70px;
+  text-shadow: 0px 1px 0px #000000;
+  max-width: 400px;
+}
+
+.banne_headline h2 {
+  color: #ffffff;
+  font-size: 25px;
+  text-shadow: 0px 1px 0px #000000;
+  max-width: 400px;
+  margin-top: 30px;
+}
+
+.banner1,
+.banner2,
+.banner3 {
+  flex: 1;
+  color: #ffffff;
+  padding: 20px;
+}
+
+.banner1 {
+  background-color: #39aae1;
+}
+
+.banner2 {
+  background-color: #0079c7;
+}
+
+.banner3 {
+  background-color: #2b4c99;
+}
+
+.banner_titulo div {
+  font-size: 21px;
+  display: block;
+}
+
+.banner_descricao {
+  font-size: 13px;
+  margin: 13px 0px;
+  line-height: 17px;
+}
+
+.banner_opacoes a {
+  display: inline-block;
+  border: 1px solid #ffffff;
+  padding: 7px;
+  color: #ffffff;
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.banner_opacoes a:hover {
+  background-color: #30aae0;
+}
+/*
+.dia_horas {
+  font-size: 13px;
+  display: flex;
+  justify-content: space-between;
+}
+.dias div,
+.horas div {
+  margin-top: 14px;
+}
+*/
+table tr td {
+  border-bottom: 1px solid;
+  padding-bottom: 10px;
+  padding-top: 15px;
+  font-size: 13px;
+}
+
+.horas {
+  padding-left: 100px;
 }
